--- a/contextstate/src/App.css
+++ b/contextstate/src/App.css
@@ -5,6 +5,7 @@
   text-align: center;
 }
 
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +40,16 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.light{
+  background-color: aliceblue;
+  color: black;
+  min-width: 500px;
+}
+.dark{
+  background-color: black;
+  color: aliceblue;
+  min-width: 500px;
+ 
 }
