--- a/contextstate/src/App.css
+++ b/contextstate/src/App.css
@@ -43,13 +43,61 @@
 }
 
 .light{
-  background-color: aliceblue;
-  color: black;
+  background-color: #BFD3C1;
+  color: #68A691;
   min-width: 500px;
+  border-radius: 15px;
 }
 .dark{
-  background-color: black;
-  color: aliceblue;
+  background-color: #001011;
+  color: #EFC7C2;
   min-width: 500px;
+ border-radius: 15px;
+}
+form{
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 5px;
+}
+
+button {
+  padding: 10px;
  
 }
+
+input{
+  flex:1;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid;
+}
+.dark input{
+  color: #EFC7C2;
+  border: 1px solid;
+}
+.light input{
+  border: 1px solid;
+  color: #1f3a33;
+}
+/* buttons */
+
+
+form button {
+  border-radius: 15px;
+  border: 1px solid transparent;
+}
+
+.light form button{
+  background-color: #68A691;
+  color: black;
+
+}
+.dark form button{
+  background-color: #EFC7C2;
+  color:#001011 ;
+}
+/* #EFC7C2
+#0C120C
+#001011
+#68A691
+#694F5D */
